# aeyae

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.linux_build_with_qt5  README-apprenticevideo-development-environment.md  README.md  add_ffmpeg.cmake  add_fontconfig.cmake  add_freetype.cmake  add_fribidi.cmake  add_glew.cmake  add_harfbuzz.cmake  add_hdhomerun.cmake  add_libass.cmake  add_libbfd.cmake  add_portaudio.cmake  aeyae_get_git_revision.cmake  aeyae_update_resource_files_to_revision.cmake  aeyae_update_revision.cmake  getGitRevision.cmake  getSvnRevision.cmake  get_pkgconfig.cmake  make-linux-app-images-in-docker.sh  make-linux-app-images-with-docker.sh  make-linux-app-images.sh  updateResourceFilesToRevision.cmake
apprenticevideo/: CMakeLists.txt  DeployOSX.sh  InfoPlist.strings  Makefile  README-DEVELOPMENT-ENVIRONMENT-REQUIREMENTS.txt  apprenticevideo.desktop  apprenticevideo.desktop.in  apprenticevideo.icns  apprenticevideo.plist  apprenticevideo.plist.in  apprenticevideo.qrc  apprenticevideo.rc  apprenticevideo.rc.in  apprenticevideo.sh.in  updateRevision.cmake  wixWrapper.cpp  yae.icns  yaeAPI.cpp  yaeAPI.h  yaeAbout.html  yaeAbout.ui  yaeAppleAudioRenderer.h  yaeAppleAudioRenderer.mm  yaeAppleRemoteControl.h  yaeAppleRemoteControl.mm  yaeAppleUtils.h  yaeAppleUtils.mm  yaeArrowItem.cpp  yaeAspectRatioDialog.ui  yaeAudioFragment.h  yaeAudioRenderer.cpp  yaeAudioRenderer.h  yaeAudioRendererInput.cpp  yaeAudioRendererPortaudio.cpp  yaeAudioRendererPortaudio.h  yaeAudioRendererQt.cpp  yaeAudioRendererQt.h  yaeAudioTempoFilter.h  yaeAudioUnitRenderer.h  yaeAudioUnitRenderer.mm  (+146 more)
apprenticevideo-classic/: CMakeLists.txt  InfoPlist.strings  apprenticevideo-classic.desktop.in  apprenticevideo-classic.icns  apprenticevideo-classic.plist.in  apprenticevideo-classic.qrc  apprenticevideo-classic.rc.in  yaeAbout.html  yaeAbout.ui  yaeAspectRatioDialog.ui  yaeLineEdit.cpp  yaeLineEdit.h  yaeMain.cpp  yaeMainView.cpp  yaeMainView.h  yaeMainWindow.cpp  yaeMainWindow.h  yaeMainWindow.ui  yaeOpenUrlDialog.ui  yaePlaylistWidget.cpp  yaePlaylistWidget.h  yaeTimelineControls.cpp  yaeTimelineControls.h
apprenticevideo-classic/images/: toggle-fullscreen.xcf  toggle-playback.xcf
apprenticevideo/images/: apprenticevideo-about.xcf  apprenticevideo-ico.xcf  apprenticevideo-logo-20150201.xcf  apprenticevideo-logo-20150202.xcf  apprenticevideo-logo.xcf  clear-dark.xcf  clear.xcf  group-collapsed-exposed.xcf  icon-audio-video.xcf  iconPlayPause.xcf  playHead.xcf  playlist-icons.xcf  search.xcf  timeIn.xcf  timeOut.xcf  yae.xcf  yap.xcf
apprenticevideo/qml/: FilterIcon.qml  Marker.qml  Player.qml  Playlist.qml  SortAndOrder.qml  Style.qml  Timeline.qml  TimelineMarker.qml  TimelineMarkerDragItem.qml  Tracer.qml  Utils.js  XButton.qml  YDebug.qml
plugins/yae_reader_ffmpeg/: CMakeLists.txt  yae_reader_ffmpeg.cpp  yae_reader_ffmpeg.h
replay/: CMakeLists.txt  InfoPlist.strings  replay.plist.in  replay.qrc  replay.rc.in  updateRevision.cmake  yaeAbout.html  yaeDemuxerView.cpp  yaeDemuxerView.h  yaeMain.cpp  yaeMainWindow.cpp  yaeMainWindow.h  yaeMainWindow.ui  yaeReplay.cpp  yaeReplay.h  yaeSpinnerView.cpp  yaeSpinnerView.h
tests/: CMakeLists.txt  aeyae_benchmark_tests.cxx  aeyae_settings_tests.cxx  aeyae_shared_ptr_tests.cxx  main.cxx  yae_benchmark_tests.cpp  yae_color_transform_tests.cpp  yae_data_tests.cpp  yae_iso14496_tests.cpp  yae_lru_cache_tests.cpp  yae_settings_tests.cpp  yae_shared_ptr_tests.cpp  yae_tests.cpp  yae_timeline_tests.cpp  yae_utils_tests.cpp
yaepg/: CMakeLists.txt  epg.cpp  yae_dvr.cpp  yae_dvr.h  yae_hdhomerun.cpp  yae_hdhomerun.h  yae_signal_handler.cpp
yaetv/: CMakeLists.txt  InfoPlist.strings  main.cpp  yaeAbout.html  yaeAbout.ui  yaeAppStyle.cpp  yaeAppStyle.h  yaeAppView.cpp  yaeAppView.h  yaeConfirmView.cpp  yaeConfirmView.h  yaeMainWindow.cpp  yaeMainWindow.h  yaeMainWindow.ui  yaePlayerView.cpp  yaePlayerView.h  yaePlayerWidget.cpp  yaePlayerWidget.h  yaePlayerWindow.cpp  yaePlayerWindow.h  yaePlayerWindow.ui  yaePreferencesDialog.ui  yae_dvr.cpp  yae_dvr.h  yae_hdhomerun.cpp  yae_hdhomerun.h  yae_live_reader.cpp  yae_live_reader.h  yae_reader_live.cpp  yae_reader_live.h  yae_signal_handler.cpp  yae_signal_handler.h  yaetv.desktop.in  yaetv.icns  yaetv.plist.in  yaetv.qrc  yaetv.rc.in
yaetv/images/: yaetv-logo.xcf
yaeui/: CMakeLists.txt  yaeAppleRemoteControl.h  yaeAppleRemoteControl.mm  yaeAppleUtils.h  yaeAppleUtils.mm  yaeApplication.cpp  yaeApplication.h  yaeArrowItem.cpp  yaeArrowItem.h  yaeAspectRatioItem.cpp  yaeAspectRatioItem.h  yaeAspectRatioView.cpp  yaeAspectRatioView.h  yaeAudioUnitRenderer.cpp  yaeAudioUnitRenderer.h  yaeAudioUnitRenderer.m  yaeAudioUnitRenderer.mm  yaeAxisItem.cpp  yaeAxisItem.h  yaeBBox.cpp  yaeBBox.h  yaeCanvas.cpp  yaeCanvas.h  yaeCanvasQPainterUtils.cpp  yaeCanvasQPainterUtils.h  yaeCanvasRenderer.cpp  yaeCanvasRenderer.h  yaeCanvasWidget.cpp  yaeCanvasWidget.h  yaeCheckboxItem.cpp  yaeCheckboxItem.h  yaeColor.h  yaeConfirmItem.cpp  yaeConfirmItem.h  yaeConfirmView.cpp  yaeConfirmView.h  yaeDashedRect.cpp  yaeDashedRect.h  yaeDonutRect.cpp  yaeDonutRect.h  (+94 more)
yamka/: CMakeLists.txt  example  updateRevision.cmake  yamka-vc9.vcproj  yamka.h  yamka.vcproj  yamkaBytes.cpp  yamkaBytes.h  yamkaCache.cpp  yamkaCache.h  yamkaConstMemoryStorage.cpp  yamkaConstMemoryStorage.h  yamkaCrc32.cpp  yamkaCrc32.h  yamkaEBML.cpp  yamkaEBML.h  yamkaElt.cpp  yamkaElt.h  yamkaEltNames.cpp  yamkaEltNames.h  yamkaFile.cpp  yamkaFile.h  yamkaFileStorage.cpp  yamkaFileStorage.h  yamkaHodgePodge.cpp  yamkaHodgePodge.h  yamkaIStorage.cpp  yamkaIStorage.h  yamkaMatroska.cpp  yamkaMatroska.h  yamkaMemoryStorage.cpp  yamkaMemoryStorage.h  yamkaMixedElements.cpp  yamkaMixedElements.h  yamkaPayload.cpp  yamkaPayload.h  yamkaSharedPtr.h  yamkaStdInt.cpp  yamkaStdInt.h  yamkaTest.cpp  (+1 more)
yamka/exampleMuxer/: MatroskaFormatter.cpp  (+1 more)
yathe/: CMakeLists.txt  DeployOSX.sh  FindBoost.cmake  FindCg.cmake  FindFFTW.cmake  FindGLEW.cmake  FindQt3.cmake  FindTHE.cmake  FindYATHE.cmake  LICENSE.txt  env-lookup.sh  env.bat  env.sh  tarball.sh  tidy.sh
(+438 files in other folders)
